<resources>
    <string name="app_name">תנ\"ך יומי</string>
    <string name="setting">Setting</string>
    <string name="when_to_fire_alarm">When to notify</string>
    <string name="notification">Notification</string>
    <string name="loading">loading…</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title">Welcome</string>
    <string name="dialogText">for reading all the tanah in one year according to masora, good luck!\n\nFor setting daily notification you need to click on ⚙ in the bottom of the screen\n for notification you have to allow notification</string>
    <string name="Important_massage"><u>Important Information!</u></string>
    <string name="important_dialog_title">Important Information</string>
    <string name="important_dialogText">On some cell phones <b>in order for the alerts to work after the cell phone is turned off </b>, the \"Autostart\" option must be activated in the app info.</string>
    <string name="for_info_important_dialog">Go to \"app Info\"</string>
    <string name="isStudent">Notifications matching the student program</string>
    <string name="not_allowed">Need permission for notification</string>
    <string name="install_avaliable">Install new update</string>
    <string name="install">Install</string>
    <string name="donate_button_text">Recognized donation</string>

</resources>